fixed font that was too large

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -248,7 +248,7 @@ $altTheme: mat-dark-theme($theme-primary, $theme-accent, $theme-warn);
 }
 
 .larger-text p{
-  font-size: 30px !important;
+  font-size: 20px !important;
   font-family: "Comic Sans MS" !important;
 }
 
